Fix spacing issues/styling.

--- a/components/ui/InputTextArea/InputTextArea.module.css
+++ b/components/ui/InputTextArea/InputTextArea.module.css
@@ -1,5 +1,6 @@
-.form {
+.inputform {
     line-height: 0;
+    padding: 1rem 2.5rem 1rem 1rem;
 }
 
 .generate {
@@ -34,8 +35,6 @@
     position: relative;
     width: 100%;
     resize: none;
-    padding: 1rem 2.5rem 1rem 1rem;
-    margin: 0;
     line-height: 1.5;
     outline: none;
     background: inherit;
