--- a/components/ui/Search/Search.module.css
+++ b/components/ui/Search/Search.module.css
@@ -11,10 +11,19 @@
     color: var(--low-contrast-text);
 }
 
-.searchcontainer {
+.searchform {
     position: relative;
     width: 100%;
-    max-width: calc(600px + 3.5rem);
+    padding: 1rem 2.5rem 1rem 1rem;
+    max-width: 600px;
+    background: var(--card-background);
+    border: 1px solid var(--card-border);
+    border-radius: 0.5rem;
+    box-shadow: 0 1px 4px var(--card-box-shadow);
+}
+
+.searchform:focus {
+    border: 1px solid var(--card-focus-border);
 }
 
 .searchinput {
@@ -22,18 +31,9 @@
     position: relative;
     width: 100%;
     resize: none;
-    padding: 1rem 2.5rem 1rem 1rem;
-    margin: 0;
     line-height: 1.5;
     outline: none;
     color: inherit;
     font-size: 1.2rem;
-    background: var(--card-background);
-    border: 1px solid var(--card-border);
-    border-radius: 0.5rem;
-    box-shadow: 0 1px 4px var(--card-box-shadow);
     max-width: 600px;
-}
-.searchinput:focus {
-    border: 1px solid var(--card-focus-border);
 }
